trunk/Archive2/b1/b7f71f731f8b64/output
g++
main.cpp:3:6: warning: ISO C++ forbids declaration of 'main' with no type [-Wpedantic]
 main(){
      ^
main.cpp: In function 'int main()':
main.cpp:6:11: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
     me.id ="hello";
           ^

hello
helloclang++
main.cpp:3:1: error: C++ requires a type specifier for all declarations
main(){
^~~~
main.cpp:6:12: warning: conversion from string literal to 'char *' is deprecated [-Wc++11-compat-deprecated-writable-strings]
    me.id ="hello";
           ^
1 warning and 1 error generated.
