trunk/Archive2/b1/b7f71f731f8b64/main.cpp
#include <stdio.h>

main(){
    union test{char *id;char *name;};
    union test me;
    me.id ="hello";
    printf("\n%s",me.id);
    printf("\n%s",me.name);
} 